update testing environment